--- a/www/css/_base.css
+++ b/www/css/_base.css
@@ -1,13 +1,10 @@
-/* Общие стили и сбросы */
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
     background-color: var(--color-background-dark);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
 }
 
 * {
@@ -21,16 +18,22 @@ html, body {
 }
 
 body {
-    background-color: var(--color-background-dark);
     color: var(--color-text-light);
-    overflow: hidden;
-    touch-action: none;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    font-family: 'Press Start 2P', monospace;
     font-size: clamp(10px, 2vw, 14px);
+}
+
+#app-container {
+    height: 100%;
+    position: relative;
+    overflow: auto;
+
+    padding-bottom: 0;
+
+    transition: padding-bottom 0.3s ease-out;
+}
+
+#gameArea {
+
+    margin-bottom: 100px;
+
 }
